--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
