--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.1",
     "express-async-errors": "^3.1.1",
+    "express-oas-generator": "^1.0.46",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
