--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "start": "node src/index.js",
     "dev": "node --watch src/index.js",
     "test": "node --experimental-vm-modules ./node_modules/.bin/jest src",
-    "test:coverage": "node --experimental-vm-modules ./node_modules/.bin/jest src --coverage"
+    "test:coverage": "node --experimental-vm-modules ./node_modules/.bin/jest src --coverage",
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "jest": {
     "collectCoverage": true,
@@ -24,6 +26,7 @@
     "uuid": "^10.0.0"
   },
   "devDependencies": {
+    "cypress": "^13.15.0",
     "jest": "^29.7.0",
     "supertest": "^7.0.0"
   }
