--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "express-async-errors": "^3.1.1",
     "morgan": "^1.10.0",
     "swagger-ui-express": "^5.0.1",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "cypress": "^13.15.0",
